--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -1764,51 +1764,67 @@ function downloadMotor(buttonId) {
 </script>
 <script>
 const nicheAdvices = [
-"Comparing life insurance quotes from multiple providers helps identify affordable premiums suitable coverage flexible benefits and reliable claim histories ensuring long term family protection while avoiding unnecessary policy costs online.",
-"Requesting car insurance quotes annually allows drivers to compare premiums coverage limits excess options and additional benefits ensuring cost effective vehicle protection while preventing overpayment caused by loyalty pricing penalties.",
-"Choosing the best health insurance plan requires comparing hospital networks benefit limits exclusions co payments and claim procedures ensuring medical coverage matches family healthcare needs and long term budget expectations.",
-"Consulting a licensed financial advisor helps align investment strategies retirement planning tax efficiency and risk tolerance ensuring informed decisions while avoiding costly mistakes driven by emotional market reactions.",
-"Using regulated online investment platforms allows investors to compare fees fund options performance tools and security features ensuring efficient portfolio management and consistent long term wealth building outcomes.",
-"Comparing personal loan interest rates and repayment terms across lenders improves affordability reduces total borrowing costs and helps maintain healthy monthly cash flow without unnecessary financial strain.",
-"Mortgage comparison tools help homebuyers evaluate interest rates repayment periods lender fees and approval requirements ensuring better property financing decisions and sustainable long term affordability planning.",
-"Choosing low cost index funds through reputable investment providers improves returns by minimizing fees offering diversification and aligning portfolios with long term financial growth objectives.",
-"Reviewing short term insurance policies annually helps compare premiums coverage limits exclusions and insurers ensuring valuable assets remain protected while avoiding underinsurance or unnecessary premium expenses.",
-"Using retirement annuity calculators helps investors compare providers contribution levels tax benefits and projected income ensuring informed retirement planning and stable future financial security outcomes.",
-"Comparing business insurance quotes protects companies against liability property loss and operational risks while ensuring cost effective coverage aligned with industry requirements and regulatory compliance obligations.",
-"Selecting the best credit card requires comparing interest rates annual fees rewards programs and benefits ensuring alignment with spending habits and long term personal financial goals.",
-"Evaluating investment fund performance alongside fees risk profiles and asset allocation helps investors choose suitable options aligned with objectives time horizons and risk tolerance levels.",
-"Comparing home insurance providers ensures coverage includes structural damage theft natural disasters and liability protection while maintaining affordable premiums and reliable claim settlement records.",
-"Working with a qualified tax advisor helps optimize deductions exemptions and investment structures ensuring compliance while improving net returns through legal tax efficiency strategies.",
-"Comparing fixed deposit rates across banks helps savers maximize interest earnings while selecting suitable lock in periods and ensuring capital protection through regulated financial institutions.",
-"Choosing the right medical aid plan requires evaluating monthly contributions benefit thresholds waiting periods and hospital coverage ensuring healthcare affordability and adequate protection for dependents.",
-"Comparing disability insurance policies ensures income protection during illness or injury by evaluating benefit payouts waiting periods exclusions and premium affordability for long term financial stability.",
-"Using investment comparison websites helps analyze ETFs unit trusts and retirement products ensuring transparent fee structures performance history and suitability for long term wealth creation.",
-"Evaluating insurer claim settlement ratios helps consumers choose reliable providers offering faster payouts transparent processes and reduced claim disputes during stressful loss events.",
-"Comparing student loan options helps families evaluate interest rates repayment flexibility and funding limits ensuring affordable education financing without excessive long term debt burdens.",
-"Selecting the best savings account requires comparing interest rates withdrawal flexibility fees and digital banking features ensuring efficient cash management and emergency fund accessibility.",
-"Using financial planning tools helps individuals align budgeting saving investing and insurance decisions ensuring disciplined progress toward clearly defined long term financial independence goals.",
-"Comparing travel insurance policies ensures coverage for medical emergencies cancellations lost baggage and delays while avoiding exclusions that may cause unexpected claim rejections.",
-"Choosing reputable investment brokers ensures platform security regulatory compliance transparent fees and access to diversified markets supporting confident long term investing strategies.",
-"Reviewing insurance excess amounts helps balance premium affordability with manageable out of pocket costs during claims or unexpected loss situations.",
-"Comparing retirement fund administrators ensures competitive fees strong governance investment performance and reliable benefit payments during post employment years.",
-"Selecting the right life cover amount requires assessing income replacement debt obligations dependents education costs and inflation ensuring sufficient protection without excessive premiums.",
-"Using online insurance calculators helps estimate appropriate coverage levels premiums and benefits ensuring informed decisions before requesting personalized insurance quotes from providers.",
-"Evaluating property investment opportunities requires analyzing rental yields financing costs location demand and long term appreciation potential ensuring sustainable real estate returns.",
-"Comparing forex trading platforms helps assess spreads leverage fees regulation and execution reliability ensuring safer participation in currency markets.",
-"Choosing diversified investment portfolios reduces risk exposure improves stability and supports consistent returns across varying market conditions and economic cycles.",
-"Comparing funeral insurance policies ensures affordable premiums coverage amounts waiting periods and beneficiary payouts supporting family financial relief during emotional loss events.",
-"Selecting ethical investment funds allows investors to align portfolios with environmental social governance values while maintaining competitive financial performance.",
-"Comparing business loan options helps entrepreneurs evaluate interest rates repayment flexibility approval timelines and funding limits supporting sustainable business growth decisions.",
-"Reviewing insurance policy wording helps prevent claim disputes by understanding exclusions conditions benefit limits and documentation requirements before incidents occur.",
-"Using robo advisory investment services offers automated portfolio management diversification and low fees suitable for long term investors seeking simplicity.",
-"Comparing medical insurance gap cover options protects against hospital shortfalls ensuring reduced out of pocket medical expenses during specialist treatments.",
-"Choosing the best annuity option requires comparing guaranteed income levels escalation rates inflation protection and provider stability ensuring retirement income sustainability.",
-"Evaluating investment risk profiles helps align asset allocation with financial goals preventing panic selling during market volatility periods.",
-"Comparing home loan refinancing offers helps reduce interest costs shorten repayment terms and improve monthly affordability through better negotiated mortgage conditions.",
-"Selecting reputable insurance brokers ensures expert guidance access to multiple providers and support during claims processes improving coverage outcomes.",
-"Using investment tracking tools helps monitor performance asset allocation fees and progress toward financial goals enabling timely portfolio adjustments.",
-"Comparing umbrella insurance policies provides additional liability protection safeguarding assets against large claims exceeding standard policy limits.",
-"Choosing regulated financial institutions ensures consumer protection transparent operations and compliance reducing risks of fraud or mismanagement."
+"Comparing car insurance quotes from multiple South African insurers ensures affordable premiums, reliable claims, and comprehensive cover while avoiding loyalty penalties and unexpected financial loss. 🚗💸🛡️",
+"Requesting vehicle finance quotes from major South African banks helps buyers compare interest rates, repayment terms, and approval criteria to make informed dealership purchasing decisions. 🏦🚘📄",
+"Choosing the best medical aid plan requires evaluating hospital networks, monthly contributions, benefit limits, and gap cover options for affordable healthcare and long-term family protection. 🏥💊👨‍👩‍👧‍👦",
+"Applying for a personal loan with reputable South African banks allows borrowers to compare interest rates, fees, and repayment flexibility for better financial management and lower costs. 💰📈🏦",
+"Comparing life insurance policies ensures families secure suitable cover, income replacement, dependable claim payouts, and long-term financial stability for dependents during unexpected life events. ❤️🛡️📄",
+"Using online car dealership platforms enables buyers to compare vehicle prices, financing options, warranties, and trade-in values before visiting showrooms for safer purchases. 🚘💻📊",
+"Selecting the right credit card from South African banks involves comparing interest rates, annual fees, rewards programs, and repayment features to maximize benefits and reduce costs. 💳🏦💡",
+"Reviewing short-term insurance policies annually helps ensure car and household assets are adequately covered, while premiums remain competitive across insurers for long-term protection. 🏡🚗🛡️",
+"Comparing home loan offers from major banks allows property buyers to secure lower interest rates, reduce fees, and achieve manageable monthly repayments. 🏠🏦📈",
+"Choosing comprehensive car insurance protects vehicles against accidents, theft, hail, and third-party claims while preserving asset value and ensuring financial security. 🚗🛡️⚡",
+"Medical aid comparison tools help South Africans evaluate affordability, hospital access, chronic benefits, and day-to-day medical expenses for better long-term health coverage. 🏥💊📊",
+"Applying for vehicle finance pre-approval strengthens negotiation power at dealerships and helps buyers stay within budget while securing better interest rates. 🚘💳🏦",
+"Life insurance calculators assist in estimating appropriate cover based on income, debts, dependents, education costs, and long-term family financial planning. ❤️📄🏡",
+"Comparing balance transfer credit cards reduces high-interest debt by moving balances to lower-rate options offered by South African banks for financial relief. 💳💸🏦",
+"Evaluating insurance excess amounts balances affordable premiums with manageable out-of-pocket costs during claims for optimal financial protection. 🛡️💰📄",
+"Comparing dealership-approved used cars ensures fair pricing, verified vehicle history, warranties, and financing options for safer and reliable purchases. 🚘📊🛠️",
+"Choosing fixed-rate personal loans provides repayment certainty and protects borrowers from rising interest rates during volatile economic periods. 💰📈🏦",
+"Comparing comprehensive vs. third-party car insurance helps drivers select protection based on vehicle value, risk exposure, and premium affordability. 🚗🛡️⚖️",
+"Selecting the right medical aid gap cover reduces unexpected hospital shortfalls and protects savings during specialist treatments and emergencies. 🏥💊💰",
+"Using online loan calculators helps borrowers understand repayment amounts, interest costs, and affordability before applying with banks for better planning. 💻🏦📄",
+"Comparing premium credit cards offers access to travel insurance, rewards, lounge benefits, and purchase protection for frequent spenders. 💳✈️🏦",
+"Reviewing insurer claim settlement records identifies providers with fast payouts, transparent processes, and reliable support during stressful events. 🛡️📄✅",
+"Choosing dealership-backed vehicle warranties protects buyers against unexpected repair costs and ensures peace of mind after purchase. 🚘🛠️💰",
+"Comparing bank vehicle finance interest rates helps reduce total repayment costs and improve long-term affordability for vehicle purchases. 🏦🚘📈",
+"Selecting suitable life cover ensures dependents maintain lifestyle stability and financial security after loss of income or accidents. ❤️🏡📄",
+"Comparing medical aid waiting periods prevents unexpected exclusions and ensures timely access to essential healthcare services. 🏥🕒💊",
+"Applying for secured loans provides lower interest rates and repayment flexibility compared to unsecured borrowing options from banks. 💰🏦📈",
+"Comparing dealership trade-in offers ensures fair vehicle valuation before upgrading or purchasing another car to avoid losses. 🚘📊💸",
+"Reviewing credit card repayment structures avoids long-term interest accumulation and improves overall credit health and financial stability. 💳📄💡",
+"Choosing insurers offering roadside assistance enhances safety, convenience, and peace of mind for motorists on South African roads. 🚗🛠️🛡️",
+"Using bond originators helps homebuyers compare multiple bank offers without submitting separate applications for faster property financing. 🏠🏦📄",
+"Selecting medical aid plans with chronic benefits ensures long-term treatment affordability and protects family savings during illness. 🏥💊💰",
+"Comparing car insurance add-ons allows drivers to choose valuable extras without paying unnecessary premiums for better coverage. 🚗🛡️💵",
+"Choosing reputable dealerships reduces risks of hidden vehicle defects, unclear ownership, or poor after-sales support for safer purchases. 🚘🛠️✅",
+"Comparing loan early settlement penalties ensures borrowers maintain flexibility to repay loans without excessive costs. 💰📄🏦",
+"Selecting credit cards with cashback rewards maximizes value from everyday spending while paying balances monthly to avoid interest. 💳💸🛍️",
+"Reviewing life insurance beneficiaries ensures payouts reach intended dependents efficiently and without legal delays. ❤️📄🏡",
+"Comparing insurance renewal increases helps identify better value policies and avoid overpaying for coverage. 🛡️💰📊",
+"Applying for pre-owned vehicle finance requires comparing interest rates, mileage limits, and warranty conditions for safer financing. 🚘🏦📄",
+"Using medical aid comparison services saves time and improves accuracy when selecting the best plan for family needs. 🏥💻💊",
+"Comparing personal loan consolidation options simplifies repayments and reduces overall interest costs while improving financial management. 💰📄📊",
+"Selecting insurers regulated by South African authorities improves consumer protection, trust, and claim reliability. 🛡️🏦✅",
+"Comparing car dealership financing vs bank financing ensures the best interest rates for vehicle purchases. 🚘🏦📈",
+"Choosing credit cards with fraud protection enhances transaction security and reduces risks of unauthorized spending. 💳🔒📄",
+"Reviewing life insurance premium structures helps manage long-term affordability while maintaining suitable coverage for dependents. ❤️📄💰",
+"Comparing health insurance hospital networks ensures preferred facility access and better medical care during emergencies. 🏥🏨💊",
+"Using dealership service plans reduces long-term vehicle maintenance costs and protects investments. 🚘🛠️💵",
+"Comparing bank loan approval times helps meet urgent financing needs efficiently and reduces waiting periods. 🏦⏱️💰",
+"Selecting comprehensive insurance protects assets against unexpected financial loss and reduces stress during emergencies. 🛡️🏡🚗",
+"Choosing reputable banks ensures transparent lending terms, regulatory compliance, and secure borrowing practices. 🏦✅📄",
+"Evaluating car insurance claim processes identifies insurers with fast, reliable, and hassle-free payouts. 🚗🛡️📄",
+"Comparing credit card reward programs ensures maximum benefit from everyday spending and loyalty incentives. 💳💰🎁",
+"Applying for life insurance early secures better premiums and long-term protection for dependents. ❤️📄⏳",
+"Using online dealership reviews helps buyers select trusted car sellers with reliable service and transparent pricing. 🚘💻✅",
+"Comparing personal loan interest rates reduces total borrowing costs and improves monthly affordability. 💰📈🏦",
+"Selecting medical aid with wellness benefits supports preventative healthcare and reduces long-term expenses. 🏥💊💡",
+"Comparing car insurance no-claims discounts ensures maximum savings without compromising protection. 🚗💰🛡️",
+"Choosing credit cards with travel insurance protects against unexpected disruptions during trips. 💳✈️🛡️",
+"Reviewing insurer customer support ratings helps select providers offering reliable guidance during claims. 🛡️📄☎️",
+"Applying for car finance pre-approval helps negotiate better vehicle prices at dealerships. 🚘🏦💸",
+"Comparing life insurance riders enhances protection for critical illness, accidents, or disability. ❤️🛡️📄"
 ];
 
 document.querySelectorAll(".niches").forEach(el => {
@@ -1816,6 +1832,8 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
+
 
 
 
