--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -1764,67 +1764,66 @@ function downloadMotor(buttonId) {
 </script>
 <script>
 const nicheAdvices = [
-"Comparing car insurance quotes from multiple South African insurers ensures affordable premiums, reliable claims, and comprehensive cover while avoiding loyalty penalties and unexpected financial loss. 🚗💸🛡️",
-"Requesting vehicle finance quotes from major South African banks helps buyers compare interest rates, repayment terms, and approval criteria to make informed dealership purchasing decisions. 🏦🚘📄",
-"Choosing the best medical aid plan requires evaluating hospital networks, monthly contributions, benefit limits, and gap cover options for affordable healthcare and long-term family protection. 🏥💊👨‍👩‍👧‍👦",
-"Applying for a personal loan with reputable South African banks allows borrowers to compare interest rates, fees, and repayment flexibility for better financial management and lower costs. 💰📈🏦",
-"Comparing life insurance policies ensures families secure suitable cover, income replacement, dependable claim payouts, and long-term financial stability for dependents during unexpected life events. ❤️🛡️📄",
-"Using online car dealership platforms enables buyers to compare vehicle prices, financing options, warranties, and trade-in values before visiting showrooms for safer purchases. 🚘💻📊",
-"Selecting the right credit card from South African banks involves comparing interest rates, annual fees, rewards programs, and repayment features to maximize benefits and reduce costs. 💳🏦💡",
-"Reviewing short-term insurance policies annually helps ensure car and household assets are adequately covered, while premiums remain competitive across insurers for long-term protection. 🏡🚗🛡️",
-"Comparing home loan offers from major banks allows property buyers to secure lower interest rates, reduce fees, and achieve manageable monthly repayments. 🏠🏦📈",
-"Choosing comprehensive car insurance protects vehicles against accidents, theft, hail, and third-party claims while preserving asset value and ensuring financial security. 🚗🛡️⚡",
-"Medical aid comparison tools help South Africans evaluate affordability, hospital access, chronic benefits, and day-to-day medical expenses for better long-term health coverage. 🏥💊📊",
-"Applying for vehicle finance pre-approval strengthens negotiation power at dealerships and helps buyers stay within budget while securing better interest rates. 🚘💳🏦",
-"Life insurance calculators assist in estimating appropriate cover based on income, debts, dependents, education costs, and long-term family financial planning. ❤️📄🏡",
-"Comparing balance transfer credit cards reduces high-interest debt by moving balances to lower-rate options offered by South African banks for financial relief. 💳💸🏦",
-"Evaluating insurance excess amounts balances affordable premiums with manageable out-of-pocket costs during claims for optimal financial protection. 🛡️💰📄",
-"Comparing dealership-approved used cars ensures fair pricing, verified vehicle history, warranties, and financing options for safer and reliable purchases. 🚘📊🛠️",
-"Choosing fixed-rate personal loans provides repayment certainty and protects borrowers from rising interest rates during volatile economic periods. 💰📈🏦",
-"Comparing comprehensive vs. third-party car insurance helps drivers select protection based on vehicle value, risk exposure, and premium affordability. 🚗🛡️⚖️",
-"Selecting the right medical aid gap cover reduces unexpected hospital shortfalls and protects savings during specialist treatments and emergencies. 🏥💊💰",
-"Using online loan calculators helps borrowers understand repayment amounts, interest costs, and affordability before applying with banks for better planning. 💻🏦📄",
-"Comparing premium credit cards offers access to travel insurance, rewards, lounge benefits, and purchase protection for frequent spenders. 💳✈️🏦",
-"Reviewing insurer claim settlement records identifies providers with fast payouts, transparent processes, and reliable support during stressful events. 🛡️📄✅",
-"Choosing dealership-backed vehicle warranties protects buyers against unexpected repair costs and ensures peace of mind after purchase. 🚘🛠️💰",
-"Comparing bank vehicle finance interest rates helps reduce total repayment costs and improve long-term affordability for vehicle purchases. 🏦🚘📈",
-"Selecting suitable life cover ensures dependents maintain lifestyle stability and financial security after loss of income or accidents. ❤️🏡📄",
-"Comparing medical aid waiting periods prevents unexpected exclusions and ensures timely access to essential healthcare services. 🏥🕒💊",
-"Applying for secured loans provides lower interest rates and repayment flexibility compared to unsecured borrowing options from banks. 💰🏦📈",
-"Comparing dealership trade-in offers ensures fair vehicle valuation before upgrading or purchasing another car to avoid losses. 🚘📊💸",
-"Reviewing credit card repayment structures avoids long-term interest accumulation and improves overall credit health and financial stability. 💳📄💡",
-"Choosing insurers offering roadside assistance enhances safety, convenience, and peace of mind for motorists on South African roads. 🚗🛠️🛡️",
-"Using bond originators helps homebuyers compare multiple bank offers without submitting separate applications for faster property financing. 🏠🏦📄",
-"Selecting medical aid plans with chronic benefits ensures long-term treatment affordability and protects family savings during illness. 🏥💊💰",
-"Comparing car insurance add-ons allows drivers to choose valuable extras without paying unnecessary premiums for better coverage. 🚗🛡️💵",
-"Choosing reputable dealerships reduces risks of hidden vehicle defects, unclear ownership, or poor after-sales support for safer purchases. 🚘🛠️✅",
-"Comparing loan early settlement penalties ensures borrowers maintain flexibility to repay loans without excessive costs. 💰📄🏦",
-"Selecting credit cards with cashback rewards maximizes value from everyday spending while paying balances monthly to avoid interest. 💳💸🛍️",
-"Reviewing life insurance beneficiaries ensures payouts reach intended dependents efficiently and without legal delays. ❤️📄🏡",
-"Comparing insurance renewal increases helps identify better value policies and avoid overpaying for coverage. 🛡️💰📊",
-"Applying for pre-owned vehicle finance requires comparing interest rates, mileage limits, and warranty conditions for safer financing. 🚘🏦📄",
-"Using medical aid comparison services saves time and improves accuracy when selecting the best plan for family needs. 🏥💻💊",
-"Comparing personal loan consolidation options simplifies repayments and reduces overall interest costs while improving financial management. 💰📄📊",
-"Selecting insurers regulated by South African authorities improves consumer protection, trust, and claim reliability. 🛡️🏦✅",
-"Comparing car dealership financing vs bank financing ensures the best interest rates for vehicle purchases. 🚘🏦📈",
-"Choosing credit cards with fraud protection enhances transaction security and reduces risks of unauthorized spending. 💳🔒📄",
-"Reviewing life insurance premium structures helps manage long-term affordability while maintaining suitable coverage for dependents. ❤️📄💰",
-"Comparing health insurance hospital networks ensures preferred facility access and better medical care during emergencies. 🏥🏨💊",
-"Using dealership service plans reduces long-term vehicle maintenance costs and protects investments. 🚘🛠️💵",
-"Comparing bank loan approval times helps meet urgent financing needs efficiently and reduces waiting periods. 🏦⏱️💰",
-"Selecting comprehensive insurance protects assets against unexpected financial loss and reduces stress during emergencies. 🛡️🏡🚗",
-"Choosing reputable banks ensures transparent lending terms, regulatory compliance, and secure borrowing practices. 🏦✅📄",
-"Evaluating car insurance claim processes identifies insurers with fast, reliable, and hassle-free payouts. 🚗🛡️📄",
-"Comparing credit card reward programs ensures maximum benefit from everyday spending and loyalty incentives. 💳💰🎁",
-"Applying for life insurance early secures better premiums and long-term protection for dependents. ❤️📄⏳",
-"Using online dealership reviews helps buyers select trusted car sellers with reliable service and transparent pricing. 🚘💻✅",
-"Comparing personal loan interest rates reduces total borrowing costs and improves monthly affordability. 💰📈🏦",
-"Selecting medical aid with wellness benefits supports preventative healthcare and reduces long-term expenses. 🏥💊💡",
-"Comparing car insurance no-claims discounts ensures maximum savings without compromising protection. 🚗💰🛡️",
-"Choosing credit cards with travel insurance protects against unexpected disruptions during trips. 💳✈️🛡️",
-"Reviewing insurer customer support ratings helps select providers offering reliable guidance during claims. 🛡️📄☎️",
-"Applying for car finance pre-approval helps negotiate better vehicle prices at dealerships. 🚘🏦💸",
-"Comparing life insurance riders enhances protection for critical illness, accidents, or disability. ❤️🛡️📄"
+"Compare Discovery car insurance and Santam premiums online to secure affordable coverage, fast claims, and peace of mind while protecting your vehicle. 🚗🛡️💸",
+"Apply for a personal loan with FNB or Standard Bank after comparing interest rates and fees to choose the best repayment plan. 🏦💰📄",
+"Choose medical aid from Discovery or Momentum for comprehensive hospital coverage, chronic care, and wellness benefits to protect your family long term. 🏥💊👨‍👩‍👧‍👦",
+"Compare life insurance options at Old Mutual and Hollard to ensure income replacement, dependents’ financial security, and reliable claim payouts. ❤️🛡️📄",
+"Use CMH or Imperial dealership platforms to compare vehicle prices, warranties, and finance packages for safer car purchases. 🚘💻📊",
+"Select the right credit card from Absa or Capitec by reviewing rewards, annual fees, and interest rates for maximum benefits. 💳🏦💡",
+"Review OUTsurance short-term policies yearly to ensure your car and home assets remain fully covered while premiums stay competitive. 🏡🚗🛡️",
+"Compare home loan offers from Nedbank and Standard Bank to reduce fees, lower interest rates, and secure manageable repayments. 🏠🏦📈",
+"Choose comprehensive Santam car insurance for accidents, theft, hail, and third-party protection to preserve vehicle value. 🚗🛡️⚡",
+"Use Discovery medical aid comparison tools to evaluate hospital networks, benefits, and affordability for optimal family healthcare coverage. 🏥💊📊",
+"Apply for vehicle finance pre-approval with FNB or Absa to negotiate better prices and ensure budget-friendly deals. 🚘💳🏦",
+"Use Hollard life insurance calculators to determine appropriate coverage for dependents, debts, and long-term family protection. ❤️📄🏡",
+"Transfer balances to Capitec or Standard Bank credit cards to reduce interest on high debt and improve financial health. 💳💸🏦",
+"Compare insurance excess amounts at Santam and OUTsurance to balance affordable premiums with manageable claim costs. 🛡️💰📄",
+"Check Imperial or McCarthy dealership-approved used cars for verified history, warranties, and finance options before purchasing. 🚘📊🛠️",
+"Choose fixed-rate personal loans from Nedbank or FNB for repayment certainty and protection against interest fluctuations. 💰📈🏦",
+"Compare comprehensive vs. third-party car insurance at Discovery or Santam to select protection based on vehicle value and risk. 🚗🛡️⚖️",
+"Select medical aid gap cover from Momentum or Discovery to prevent hospital shortfalls and safeguard savings. 🏥💊💰",
+"Use FNB online loan calculators to understand repayment amounts, interest, and affordability before applying. 💻🏦📄",
+"Select premium credit cards from Absa or Standard Bank to access travel insurance, rewards, and purchase protection. 💳✈️🏦",
+"Check insurer claim settlement ratios at Discovery and Hollard for fast, reliable, and transparent payouts. 🛡️📄✅",
+"Choose Imperial or CMH dealership-backed vehicle warranties to cover unexpected repairs after purchase. 🚘🛠️💰",
+"Compare vehicle finance rates from FNB and Standard Bank to reduce total repayment costs and improve affordability. 🏦🚘📈",
+"Select life cover from Old Mutual or Hollard to maintain family financial stability after income loss. ❤️🏡📄",
+"Check medical aid waiting periods at Discovery or Momentum to avoid early exclusions during policy use. 🏥🕒💊",
+"Apply for secured loans at Capitec or Nedbank to obtain lower interest rates than unsecured options. 💰🏦📈",
+"Compare dealership trade-in offers at CMH or McCarthy for fair vehicle valuation before upgrading. 🚘📊💸",
+"Review credit card repayment structures from Absa or Capitec to prevent interest accumulation and maintain credit health. 💳📄💡",
+"Choose insurers offering roadside assistance such as Santam or OUTsurance for safety and convenience on South African roads. 🚗🛠️🛡️",
+"Use bond originators to compare multiple Nedbank and FNB mortgage offers without submitting separate applications. 🏠🏦📄",
+"Select medical aid plans with chronic benefits from Discovery or Momentum to protect long-term family healthcare. 🏥💊💰",
+"Compare car insurance add-ons at Hollard or Santam to choose extras without unnecessary premiums. 🚗🛡️💵",
+"Choose reputable dealerships like Imperial or CMH to reduce risks of hidden defects and poor service. 🚘🛠️✅",
+"Check early settlement penalties on loans from FNB or Nedbank to maintain repayment flexibility. 💰📄🏦",
+"Select credit cards with cashback rewards from Capitec or Standard Bank for everyday spending benefits. 💳💸🛍️",
+"Review life insurance beneficiaries at Old Mutual or Hollard to ensure payouts reach dependents efficiently. ❤️📄🏡",
+"Compare insurance renewal rates at Santam and OUTsurance to avoid overpaying for coverage. 🛡️💰📊",
+"Apply for pre-owned vehicle finance with Imperial or CMH, comparing rates, mileage limits, and warranties. 🚘🏦📄",
+"Use medical aid comparison services at Discovery or Momentum to select the best plan efficiently. 🏥💻💊",
+"Consolidate personal loans with Capitec or FNB to simplify repayments and reduce interest costs. 💰📄📊",
+"Select insurers regulated by SA authorities like Discovery or Hollard for consumer protection and claim reliability. 🛡️🏦✅",
+"Compare dealership vs. bank financing with CMH or FNB for best vehicle interest rates. 🚘🏦📈",
+"Choose credit cards with fraud protection from Absa or Capitec to secure transactions. 💳🔒📄",
+"Review life insurance premium structures at Old Mutual or Hollard for long-term affordability. ❤️📄💰",
+"Compare health insurance hospital networks at Discovery or Momentum to access preferred facilities. 🏥🏨💊",
+"Use dealership service plans at Imperial or CMH to reduce long-term vehicle maintenance costs. 🚘🛠️💵",
+"Compare bank loan approval times from Nedbank or FNB to meet urgent financing needs efficiently. 🏦⏱️💰",
+"Select comprehensive insurance from Santam or OUTsurance to protect assets against unexpected financial loss. 🛡️🏡🚗",
+"Choose reputable banks like Standard Bank or Capitec for transparent lending and compliance. 🏦✅📄",
+"Evaluate car insurance claim processes at Discovery or Hollard for fast, reliable payouts. 🚗🛡️📄",
+"Compare credit card reward programs at Absa or Capitec to maximize everyday spending benefits. 💳💰🎁",
+"Apply for life insurance early at Old Mutual or Hollard for better premiums and protection. ❤️📄⏳",
+"Use online dealership reviews for CMH or Imperial to select trusted car sellers. 🚘💻✅",
+"Compare personal loan rates from FNB or Nedbank to reduce total costs and improve affordability. 💰📈🏦",
+"Select medical aid with wellness benefits from Discovery or Momentum to support preventative healthcare. 🏥💊💡",
+"Compare car insurance no-claims discounts at Santam or OUTsurance to maximize savings. 🚗💰🛡️",
+"Choose credit cards with travel insurance from Absa or Standard Bank to cover trip disruptions. 💳✈️🛡️",
+"Review insurer customer support ratings at Discovery or Hollard to select reliable providers. 🛡️📄☎️",
+"Pre-approve car finance at Imperial or CMH to negotiate better vehicle prices at dealerships. 🚘🏦💸",
+"Compare life insurance riders at Old Mutual or Hollard to enhance coverage for illness or disability. ❤️🛡️📄"
 ];
 
 document.querySelectorAll(".niches").forEach(el => {
@@ -1832,6 +1831,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
